--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.3",
     "css-loader": "^6.7.3",
+    "dotenv": "^16.0.3",
     "postcss-loader": "^7.0.2",
     "style-loader": "^3.3.1"
   }
