--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "jest-cli": "^29.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^1.9.1",
     "tailwindcss": "^3.2.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
@@ -47,6 +46,7 @@
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "postcss-loader": "^7.0.2",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "tailwind-merge": "^1.9.1"
   }
 }
