--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@expertiaai/ui",
-  "version": "0.0.25",
+  "version": "0.0.26",
   "description": "Expertia.AI Design Systems",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -46,6 +46,7 @@
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "postcss-loader": "^7.0.2",
+    "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
     "style-loader": "^3.3.1",
     "tailwind-merge": "^1.9.1"
