--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@expertiaai/ui",
-  "version": "0.0.50",
+  "version": "0.0.51",
   "description": "Expertia.AI Design Systems",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -29,6 +29,7 @@
     "jest-cli": "^29.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "source-map-loader": "^4.0.1",
     "tailwindcss": "^3.2.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
