--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@expertiaai/ui",
-  "version": "0.0.51",
+  "version": "0.0.52",
   "description": "Expertia.AI Design Systems",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -46,9 +46,11 @@
     "@radix-ui/react-tooltip": "^1.0.3",
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
+    "jsdom": "^21.1.0",
     "postcss-loader": "^7.0.2",
     "react-icons": "^4.7.1",
     "react-select": "^5.7.0",
+    "static-site-generator-webpack-plugin": "^3.4.2",
     "style-loader": "^3.3.1",
     "tailwind-merge": "^1.9.1"
   }
