--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -24,6 +24,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
+          node-version: 16
+          registry-url: https://npm.pkg.github.com/
           ssh-private-key: ${{secrets.SSH_PRIVATE_KEY}}
       - run: npm ci
       - run: npm publish
