--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -26,7 +26,8 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-          ssh-private-key: ${{secrets.SSH_PRIVATE_KEY}}
+          always-auth: true
+          scope: '@expertiaai'
       - run: npm ci
       - run: npm publish
         env:
