--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -26,7 +26,18 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci 
+      - run: 
+          echo "add deploy key"
+          eval "$(ssh-agent -s)"
+          ssh-add <(echo ${{secrets.SSH_PRIVATE_KEY}} | base64 -d)
+
+          echo "disable strict host key check"
+          touch ~/.ssh/config
+
+          echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
+
+          echo '@expertiaai:registry = https://npm.pkg.github.com' > .npmrc;
+          npm ci 
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
