--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -29,7 +29,7 @@ jobs:
       - run: 
           echo "add deploy key"
           eval "$(ssh-agent -s)"
-          ssh-add <(echo ${{secrets.SSH_PRIVATE_KEY}} | base64 -d)
+          ssh-add <(echo "${{secrets.SSH_PRIVATE_KEY}}" | base64 -d)
 
           echo "disable strict host key check"
           touch ~/.ssh/config
