--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/expertiaAI/UI.git"
+    "url": "https://github.com/expertiaAI/UI.git"
   },
   "author": "ExpertiaAI",
   "license": "ISC",
