--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -13,7 +13,6 @@ jobs:
         with:
           node-version: 16
 
-
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
@@ -26,7 +25,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci 
+      - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUBTOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
