--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@expertiaai/ui",
-  "version": "0.0.93",
+  "version": "0.0.94",
   "description": "Expertia.AI Design Systems",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -23,16 +23,17 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "jest-cli": "^29.4.3",
     "jsdom": "^21.1.0",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "source-map-loader": "^4.0.1",
     "static-site-generator-webpack-plugin": "^3.4.2",
-    "tailwindcss": "^3.2.6",
+    "tailwindcss": "^3.3.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-node-externals": "^3.0.0"
