--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@expertiaai/ui",
-  "version": "0.0.99",
+  "version": "0.0.100",
   "description": "Expertia.AI Design Systems",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -39,6 +39,7 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.6",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-progress": "^1.0.1",
